Translations by noeismet to translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -15,5 +15,6 @@
   "mn6:7.1": "Il se peut qu’un monastique désire : ‹ Puisse-je triompher sur le désir et l’insatisfaction, et que le désir et l’insatisfaction ne triomphe pas sur moi. Puisse-je vivre ayant maîtrisé le désir et l’insatisfaction chaque fois qu’ils se manifestent. › Qu’il observe donc pleinement ses préceptes… ",
   "mn6:8.1": "Il se peut qu’un monastique désire : ‹ Puisse-je triompher sur la peur et l’effroi, et que la peur et l’effroi ne triomphe pas sur moi. Puisse-je vivre ayant maîtrisé la peur et l’effroi chaque fois qu’ils se manifestent. › Qu’il observe donc pleinement ses préceptes… ",
   "mn6:9.1": "Il se peut qu’un monastique désire : ‹ Puisse-je obtenir facilement, sans effort et sans problème, les quatre absorptions méditatives qui sont de purs états de conscience, procurant une félicité dans la vie présente. › Qu’il observe donc pleinement ses préceptes… ",
-  "mn6:10.1": "Il se peut qu’un monastique désire : ‹ Puisse-je expérimenter par le corps les libérations paisibles qui sont au-delà des formes, immatérielles. › Qu’il observe donc pleinement ses préceptes… "
+  "mn6:10.1": "Il se peut qu’un monastique désire : ‹ Puisse-je expérimenter par le corps les libérations paisibles qui sont au-delà des formes, immatérielles. › Qu’il observe donc pleinement ses préceptes… ",
+  "mn6:11.1": "Il se peut qu’un monastique désire : ‹ Puisse-je, par la destruction des trois entraves, devenir un être du courant, préservé de toute renaissance dans les mondes inférieurs, en chemin vers l’éveil. › Qu’il observe donc pleinement ses préceptes… "
 }
