Translations by noeismet to translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -21,5 +21,6 @@
   "mn6:13.1": "Il se peut qu’un monastique désire : ‹ Puisse-je, par la destruction des cinq entraves inférieures, renaître spontanément, pour parvenir à l’extinction complète là-bas, sans retour en ce monde. › Qu’il observe donc pleinement ses préceptes… ",
   "mn6:14.1": "Il se peut qu’un monastique désire : ‹ Puisse-je développer de multiples aptitudes psychiques : me multiplier, puis redevenir un ; apparaître et disparaître ; traverser murs, remparts et montagnes comme s’ils étaient l’air ; m’enfoncer dans la terre et en resurgir comme si cela était l’eau ; marcher sur l’eau comme sur la terre ferme ; s’envoler dans les cieux, assis, libre comme un oiseau ; atteindre et effleurer du bout des doigts le Soleil et la Lune, majestueux et lumineux ; maîtriser mon corps jusqu’aux confins du royaume de Brahmā. › Qu’il observe donc pleinement ses préceptes… ",
   "mn6:15.1": "Il se peut qu’un monastique désire : ‹ Doté d’une clairaudience pure et extraordinaire, puisse-je percevoir tous les sons, tant divins qu’humains, qu’ils proviennent de près ou de loin. › Qu’il observe donc pleinement ses préceptes… ",
-  "mn6:16.1": "Il se peut qu’un monastique désire : ‹ Puisse-je comprendre l’esprit d’autres êtres et individus, les ayant sondés avec mon propre esprit. "
+  "mn6:16.1": "Il se peut qu’un monastique désire : ‹ Puisse-je comprendre l’esprit d’autres êtres et individus, les ayant sondés avec mon propre esprit. ",
+  "mn6:16.2": "Puisse-je discerner un esprit empreint d’avidité comme étant « un esprit empreint d’avidité », "
 }
