--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -23,5 +23,6 @@
   "mn6:15.1": "Il se peut qu’un monastique désire : ‹ Doté d’une clairaudience pure et extraordinaire, puisse-je percevoir tous les sons, tant divins qu’humains, qu’ils proviennent de près ou de loin. › Qu’il observe donc pleinement ses préceptes… ",
   "mn6:16.1": "Il se peut qu’un monastique désire : ‹ Puisse-je comprendre l’esprit d’autres êtres et individus, les ayant sondés avec mon propre esprit. ",
   "mn6:16.2": "Puisse-je discerner un esprit empreint d’avidité comme étant « un esprit empreint d’avidité », ",
-  "mn6:16.3": "et un esprit dépourvu d’avidité comme « un esprit dépourvu d’avidité » ; "
+  "mn6:16.3": "et un esprit dépourvu d’avidité comme « un esprit dépourvu d’avidité » ; ",
+  "mn6:16.4": "un esprit empreint d’aversion comme « un esprit empreint d’aversion », "
 }
