--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -25,5 +25,6 @@
   "mn6:16.2": "Puisse-je discerner un esprit empreint d’avidité comme étant « un esprit empreint d’avidité », ",
   "mn6:16.3": "et un esprit dépourvu d’avidité comme « un esprit dépourvu d’avidité » ; ",
   "mn6:16.4": "un esprit empreint d’aversion comme « un esprit empreint d’aversion », ",
-  "mn6:16.5": "et un esprit dépourvu d’aversion comme « un esprit dépourvu d’aversion » ; "
+  "mn6:16.5": "et un esprit dépourvu d’aversion comme « un esprit dépourvu d’aversion » ; ",
+  "mn6:16.6": "un esprit empreint d’illusion comme « un esprit empreint d’illusion », "
 }
