--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -26,5 +26,6 @@
   "mn6:16.3": "et un esprit dépourvu d’avidité comme « un esprit dépourvu d’avidité » ; ",
   "mn6:16.4": "un esprit empreint d’aversion comme « un esprit empreint d’aversion », ",
   "mn6:16.5": "et un esprit dépourvu d’aversion comme « un esprit dépourvu d’aversion » ; ",
-  "mn6:16.6": "un esprit empreint d’illusion comme « un esprit empreint d’illusion », "
+  "mn6:16.6": "un esprit empreint d’illusion comme « un esprit empreint d’illusion », ",
+  "mn6:16.7": "et un esprit dépourvu d’illusion comme « un esprit dépourvu d’illusion » ; "
 }
