Translations by noeismet to translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -27,5 +27,6 @@
   "mn6:16.4": "un esprit empreint d’aversion comme « un esprit empreint d’aversion », ",
   "mn6:16.5": "et un esprit dépourvu d’aversion comme « un esprit dépourvu d’aversion » ; ",
   "mn6:16.6": "un esprit empreint d’illusion comme « un esprit empreint d’illusion », ",
-  "mn6:16.7": "et un esprit dépourvu d’illusion comme « un esprit dépourvu d’illusion » ; "
+  "mn6:16.7": "et un esprit dépourvu d’illusion comme « un esprit dépourvu d’illusion » ; ",
+  "mn6:16.8": "un esprit restreint comme « un esprit restreint », "
 }
