Translations by noeismet to translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -31,5 +31,6 @@
   "mn6:16.8": "un esprit restreint comme « un esprit restreint », ",
   "mn6:16.9": "et un esprit dispersé comme « un esprit dispersé » ; ",
   "mn6:16.10": "un esprit élevé comme « un esprit élevé », ",
-  "mn6:16.11": "et un esprit non élevé comme « un esprit non élevé » ; "
+  "mn6:16.11": "et un esprit non élevé comme « un esprit non élevé » ; ",
+  "mn6:16.12": "un esprit supérieur comme « un esprit supérieur », "
 }
