--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -32,5 +32,6 @@
   "mn6:16.9": "et un esprit dispersé comme « un esprit dispersé » ; ",
   "mn6:16.10": "un esprit élevé comme « un esprit élevé », ",
   "mn6:16.11": "et un esprit non élevé comme « un esprit non élevé » ; ",
-  "mn6:16.12": "un esprit supérieur comme « un esprit supérieur », "
+  "mn6:16.12": "un esprit supérieur comme « un esprit supérieur », ",
+  "mn6:16.13": "et un esprit suprême comme « un esprit suprême » ; "
 }
