--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -35,5 +35,6 @@
   "mn6:16.12": "un esprit supérieur comme « un esprit supérieur », ",
   "mn6:16.13": "et un esprit suprême comme « un esprit suprême » ; ",
   "mn6:16.14": "un esprit unifié comme « un esprit unifié », ",
-  "mn6:16.15": "et un esprit non unifié comme « un esprit non unifié » ; "
+  "mn6:16.15": "et un esprit non unifié comme « un esprit non unifié » ; ",
+  "mn6:16.16": "un esprit libéré comme « un esprit libéré », "
 }
