--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -36,5 +36,6 @@
   "mn6:16.13": "et un esprit suprême comme « un esprit suprême » ; ",
   "mn6:16.14": "un esprit unifié comme « un esprit unifié », ",
   "mn6:16.15": "et un esprit non unifié comme « un esprit non unifié » ; ",
-  "mn6:16.16": "un esprit libéré comme « un esprit libéré », "
+  "mn6:16.16": "un esprit libéré comme « un esprit libéré », ",
+  "mn6:16.17": "et un esprit non libéré comme « un esprit non libéré ». › "
 }
