Translations by noeismet to translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -46,5 +46,6 @@
   "mn6:19.1": "Il se peut qu’un monastique désire : ‹ Puisse-je, dans cette existence même, parvenir à la liberté du cœur, pure et sans tache, ainsi qu’à la liberté acquise par la sagesse. Que je vive, ayant atteint cet état, avec la compréhension profonde acquise par la dissolution complète des souillures. › ",
   "mn6:19.2": "Qu’il observe donc ses préceptes, soit engagé à maintenir la sérénité intérieure de l’esprit, ne néglige pas la méditation, fasse preuve de discernement, et opte pour la retraite dans des huttes vides. ",
   "mn6:20.1": "‹ Monastiques, observez scrupuleusement les préceptes éthiques et le code monastique. Conduisez-vous avec modération en suivant ce code, adoptez une bonne conduite et sollicitez des aumônes en des lieux convenables. Conscients des risques liés à la moindre infraction, respectez les règles que vous avez adoptées. › ",
-  "mn6:20.2": "C’est ce que j’ai dit, et voici pourquoi je l’ai dit. » "
+  "mn6:20.2": "C’est ce que j’ai dit, et voici pourquoi je l’ai dit. » ",
+  "mn6:20.3": "C’est ce que le Bouddha a déclaré. "
 }
