Translations by noeismet to translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -47,5 +47,6 @@
   "mn6:19.2": "Qu’il observe donc ses préceptes, soit engagé à maintenir la sérénité intérieure de l’esprit, ne néglige pas la méditation, fasse preuve de discernement, et opte pour la retraite dans des huttes vides. ",
   "mn6:20.1": "‹ Monastiques, observez scrupuleusement les préceptes éthiques et le code monastique. Conduisez-vous avec modération en suivant ce code, adoptez une bonne conduite et sollicitez des aumônes en des lieux convenables. Conscients des risques liés à la moindre infraction, respectez les règles que vous avez adoptées. › ",
   "mn6:20.2": "C’est ce que j’ai dit, et voici pourquoi je l’ai dit. » ",
-  "mn6:20.3": "C’est ce que le Bouddha a déclaré. "
+  "mn6:20.3": "C’est ce que le Bouddha a déclaré. ",
+  "mn6:20.4": "Satisfaits, les monastiques se réjouirent et apprécièrent les paroles du Bouddha. "
 }
