--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -13,5 +13,6 @@
   "dhp211:1": "Zato ne čini ništa sebi dragim, ",
   "dhp211:2": "bolno je od dragog rastati se, ",
   "dhp211:3": "nema okova za one ",
-  "dhp211:4": "koji nadiđoše i drago i nedrago. "
+  "dhp211:4": "koji nadiđoše i drago i nedrago. ",
+  "dhp212:0": "Iz voljenog bol se rađa, "
 }
