--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -16,5 +16,5 @@
   "dhp211:4": "koji nadiđoše i drago i nedrago. ",
   "dhp212:0": "Iz voljenog bol se rađa, ",
   "dhp212:1": "iz voljenog strah se rađa, ",
-  "dhp212:2": "u onom ko se voljenog oslobodi, "
+  "dhp212:2": ""
 }
