Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -15,6 +15,6 @@
   "dhp211:3": "nema okova za one ",
   "dhp211:4": "koji nadiđoše i drago i nedrago. ",
   "dhp212:0": "",
-  "dhp212:1": "iz voljenog strah se rađa, ",
+  "dhp212:1": "Iz voljenog bol se rađa, ",
   "dhp212:2": ""
 }
