--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -16,5 +16,6 @@
   "dhp211:4": "koji nadiđoše i drago i nedrago. ",
   "dhp212:0": "",
   "dhp212:1": "Iz voljenog bol se rađa, ",
-  "dhp212:2": "iz voljenog strah se rađa, "
+  "dhp212:2": "iz voljenog strah se rađa, ",
+  "dhp212:3": "u onom ko se voljenog oslobodi, "
 }
