Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -17,5 +17,6 @@
   "dhp212:0": "",
   "dhp212:1": "Iz voljenog bol se rađa, ",
   "dhp212:2": "iz voljenog strah se rađa, ",
-  "dhp212:3": "u onom ko se voljenog oslobodi, "
+  "dhp212:3": "u onom ko se voljenog oslobodi, ",
+  "dhp212:4": "bola nema, a otkud bi strah? "
 }
