Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -21,5 +21,6 @@
   "dhp212:4": "bola nema, a otkud bi strah? ",
   "dhp213:1": "Iz sklonosti bol se rađa, ",
   "dhp213:2": "iz sklonosti strah se rađa, ",
-  "dhp213:3": "u onom ko se sklonosti oslobodi, "
+  "dhp213:3": "u onom ko se sklonosti oslobodi, ",
+  "dhp213:4": "bola nema, a otkud bi strah? "
 }
