--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -24,5 +24,6 @@
   "dhp213:3": "u onom ko se sklonosti oslobodi, ",
   "dhp213:4": "bola nema, a otkud bi strah? ",
   "dhp214:1": "Iz ushićenja bol se rađa, ",
-  "dhp214:2": "iz ushićenja strah se rađa, "
+  "dhp214:2": "iz ushićenja strah se rađa, ",
+  "dhp214:3": "u onom ko se ushićenja oslobodi, "
 }
