--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -25,5 +25,6 @@
   "dhp213:4": "bola nema, a otkud bi strah? ",
   "dhp214:1": "Iz ushićenja bol se rađa, ",
   "dhp214:2": "iz ushićenja strah se rađa, ",
-  "dhp214:3": "u onom ko se ushićenja oslobodi, "
+  "dhp214:3": "u onom ko se ushićenja oslobodi, ",
+  "dhp214:4": "bola nema, a otkud bi strah? "
 }
