Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -26,5 +26,6 @@
   "dhp214:1": "Iz ushićenja bol se rađa, ",
   "dhp214:2": "iz ushićenja strah se rađa, ",
   "dhp214:3": "u onom ko se ushićenja oslobodi, ",
-  "dhp214:4": "bola nema, a otkud bi strah? "
+  "dhp214:4": "bola nema, a otkud bi strah? ",
+  "dhp215:1": "Iz čulne želje bol se rađa, "
 }
