Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -27,5 +27,6 @@
   "dhp214:2": "iz ushićenja strah se rađa, ",
   "dhp214:3": "u onom ko se ushićenja oslobodi, ",
   "dhp214:4": "bola nema, a otkud bi strah? ",
-  "dhp215:1": "Iz čulne želje bol se rađa, "
+  "dhp215:1": "Iz čulne želje bol se rađa, ",
+  "dhp215:2": "iz čulne želje strah se rađa, "
 }
