--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -28,5 +28,6 @@
   "dhp214:3": "u onom ko se ushićenja oslobodi, ",
   "dhp214:4": "bola nema, a otkud bi strah? ",
   "dhp215:1": "Iz čulne želje bol se rađa, ",
-  "dhp215:2": "iz čulne želje strah se rađa, "
+  "dhp215:2": "iz čulne želje strah se rađa, ",
+  "dhp215:3": "u onom ko se čulne želje oslobodi, "
 }
