--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -29,5 +29,6 @@
   "dhp214:4": "bola nema, a otkud bi strah? ",
   "dhp215:1": "Iz čulne želje bol se rađa, ",
   "dhp215:2": "iz čulne želje strah se rađa, ",
-  "dhp215:3": "u onom ko se čulne želje oslobodi, "
+  "dhp215:3": "u onom ko se čulne želje oslobodi, ",
+  "dhp215:4": "bola nema, a otkud bi strah? "
 }
