Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -30,5 +30,6 @@
   "dhp215:1": "Iz čulne želje bol se rađa, ",
   "dhp215:2": "iz čulne želje strah se rađa, ",
   "dhp215:3": "u onom ko se čulne želje oslobodi, ",
-  "dhp215:4": "bola nema, a otkud bi strah? "
+  "dhp215:4": "bola nema, a otkud bi strah? ",
+  "dhp216:1": "Iz žudnje bol se rađa, "
 }
