Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -32,5 +32,6 @@
   "dhp215:3": "u onom ko se čulne želje oslobodi, ",
   "dhp215:4": "bola nema, a otkud bi strah? ",
   "dhp216:1": "Iz žudnje bol se rađa, ",
-  "dhp216:2": "iz žudnje strah se rađa, "
+  "dhp216:2": "iz žudnje strah se rađa, ",
+  "dhp216:3": "u onom ko se žudnje oslobodi, "
 }
