--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -33,5 +33,6 @@
   "dhp215:4": "bola nema, a otkud bi strah? ",
   "dhp216:1": "Iz žudnje bol se rađa, ",
   "dhp216:2": "iz žudnje strah se rađa, ",
-  "dhp216:3": "u onom ko se žudnje oslobodi, "
+  "dhp216:3": "u onom ko se žudnje oslobodi, ",
+  "dhp216:4": "bola nema, a otkud bi strah? "
 }
