--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -34,5 +34,6 @@
   "dhp216:1": "Iz žudnje bol se rađa, ",
   "dhp216:2": "iz žudnje strah se rađa, ",
   "dhp216:3": "u onom ko se žudnje oslobodi, ",
-  "dhp216:4": "bola nema, a otkud bi strah? "
+  "dhp216:4": "bola nema, a otkud bi strah? ",
+  "dhp217:1": "Ko je savršen u vrlini i uvidu, "
 }
