Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -37,5 +37,6 @@
   "dhp216:4": "bola nema, a otkud bi strah? ",
   "dhp217:1": "Ko je savršen u vrlini i uvidu, ",
   "dhp217:2": "učvršćen u Učenju, ostvario istinu, ",
-  "dhp217:3": "ko je svoju dužnost ispunio, "
+  "dhp217:3": "ko je svoju dužnost ispunio, ",
+  "dhp217:4": "toga mnogi dragim smatraju. "
 }
