--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -39,5 +39,6 @@
   "dhp217:2": "učvršćen u Učenju, ostvario istinu, ",
   "dhp217:3": "ko je svoju dužnost ispunio, ",
   "dhp217:4": "toga mnogi dragim smatraju. ",
-  "dhp218:1": "U kom se rodi želja za neizrecivim, "
+  "dhp218:1": "U kom se rodi želja za neizrecivim, ",
+  "dhp218:2": "uma nadahnutim mudrošću, "
 }
