Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -41,5 +41,6 @@
   "dhp217:4": "toga mnogi dragim smatraju. ",
   "dhp218:1": "U kom se rodi želja za neizrecivim, ",
   "dhp218:2": "uma nadahnutim mudrošću, ",
-  "dhp218:3": "takav – nesputan čarima čula – "
+  "dhp218:3": "takav – nesputan čarima čula – ",
+  "dhp218:4": "u svet se ovaj više ne vraća. "
 }
