--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -43,5 +43,6 @@
   "dhp218:2": "uma nadahnutim mudrošću, ",
   "dhp218:3": "takav – nesputan čarima čula – ",
   "dhp218:4": "u svet se ovaj više ne vraća. ",
-  "dhp219:1": "Kad se posle dugog izbivanja "
+  "dhp219:1": "Kad se posle dugog izbivanja ",
+  "dhp219:2": "čovek sretno kući vrati, "
 }
