Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -44,5 +44,6 @@
   "dhp218:3": "takav – nesputan čarima čula – ",
   "dhp218:4": "u svet se ovaj više ne vraća. ",
   "dhp219:1": "Kad se posle dugog izbivanja ",
-  "dhp219:2": "čovek sretno kući vrati, "
+  "dhp219:2": "čovek sretno kući vrati, ",
+  "dhp219:3": "rodbina i prijatelji "
 }
