--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -46,5 +46,6 @@
   "dhp219:1": "Kad se posle dugog izbivanja ",
   "dhp219:2": "čovek sretno kući vrati, ",
   "dhp219:3": "rodbina i prijatelji ",
-  "dhp219:4": "radosno ga dočekuju. "
+  "dhp219:4": "radosno ga dočekuju. ",
+  "dhp220:1": "Tako i dobra dela "
 }
