Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -47,5 +47,6 @@
   "dhp219:2": "čovek sretno kući vrati, ",
   "dhp219:3": "rodbina i prijatelji ",
   "dhp219:4": "radosno ga dočekuju. ",
-  "dhp220:1": "Tako i dobra dela "
+  "dhp220:1": "Tako i dobra dela ",
+  "dhp220:2": "dočekuju počinioca u narednom životu; "
 }
