Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -48,5 +48,6 @@
   "dhp219:3": "rodbina i prijatelji ",
   "dhp219:4": "radosno ga dočekuju. ",
   "dhp220:1": "Tako i dobra dela ",
-  "dhp220:2": "dočekuju počinioca u narednom životu; "
+  "dhp220:2": "dočekuju počinioca u narednom životu; ",
+  "dhp220:3": "poput srodnika radosnih "
 }
