Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp209-220_translation-sr-brankokovacevic.json
@@ -49,5 +49,6 @@
   "dhp219:4": "radosno ga dočekuju. ",
   "dhp220:1": "Tako i dobra dela ",
   "dhp220:2": "dočekuju počinioca u narednom životu; ",
-  "dhp220:3": "poput srodnika radosnih "
+  "dhp220:3": "poput srodnika radosnih ",
+  "dhp220:4": "u susret mu idu. "
 }
