--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -1,5 +1,6 @@
 {
   "dhp221:0.1": "Kratka zbirka Budnih govora ",
   "dhp221:0.2": "Reči mudrosti ",
-  "dhp221:0.3": "Bes "
+  "dhp221:0.3": "Bes ",
+  "dhp221:1": "Odbaciti bes treba, napustiti gordost, "
 }
