Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -2,5 +2,6 @@
   "dhp221:0.1": "Kratka zbirka Budnih govora ",
   "dhp221:0.2": "Reči mudrosti ",
   "dhp221:0.3": "Bes ",
-  "dhp221:1": "Odbaciti bes treba, napustiti gordost, "
+  "dhp221:1": "Odbaciti bes treba, napustiti gordost, ",
+  "dhp221:2": "svaki okov savladati, "
 }
