--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -3,5 +3,6 @@
   "dhp221:0.2": "Reči mudrosti ",
   "dhp221:0.3": "Bes ",
   "dhp221:1": "Odbaciti bes treba, napustiti gordost, ",
-  "dhp221:2": "svaki okov savladati, "
+  "dhp221:2": "svaki okov savladati, ",
+  "dhp221:3": "ko je nevezan za ime i oblik, "
 }
