Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -4,5 +4,6 @@
   "dhp221:0.3": "Bes ",
   "dhp221:1": "Odbaciti bes treba, napustiti gordost, ",
   "dhp221:2": "svaki okov savladati, ",
-  "dhp221:3": "ko je nevezan za ime i oblik, "
+  "dhp221:3": "ko je nevezan za ime i oblik, ",
+  "dhp221:4": "ko ničeg nema, taj ni patnje nema. "
 }
