Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -6,5 +6,6 @@
   "dhp221:2": "svaki okov savladati, ",
   "dhp221:3": "ko je nevezan za ime i oblik, ",
   "dhp221:4": "ko ničeg nema, taj ni patnje nema. ",
-  "dhp222:1": "Onaj ko zauzdava nadolazeći bes "
+  "dhp222:1": "Onaj ko zauzdava nadolazeći bes ",
+  "dhp222:2": "k’o kočiju kad prebrzo krene, "
 }
