Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -8,5 +8,6 @@
   "dhp221:4": "ko ničeg nema, taj ni patnje nema. ",
   "dhp222:1": "Onaj ko zauzdava nadolazeći bes ",
   "dhp222:2": "k’o kočiju kad prebrzo krene, ",
-  "dhp222:3": "toga ja kočijašem zovem. "
+  "dhp222:3": "toga ja kočijašem zovem. ",
+  "dhp222:4": "Ostali samo uzde pridržavaju. "
 }
