--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -9,5 +9,6 @@
   "dhp222:1": "Onaj ko zauzdava nadolazeći bes ",
   "dhp222:2": "k’o kočiju kad prebrzo krene, ",
   "dhp222:3": "toga ja kočijašem zovem. ",
-  "dhp222:4": "Ostali samo uzde pridržavaju. "
+  "dhp222:4": "Ostali samo uzde pridržavaju. ",
+  "dhp223:1": "Mirom bes pobedi, "
 }
