Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -11,5 +11,6 @@
   "dhp222:3": "toga ja kočijašem zovem. ",
   "dhp222:4": "Ostali samo uzde pridržavaju. ",
   "dhp223:1": "Mirom bes pobedi, ",
-  "dhp223:2": "loše dobrim pobedi, "
+  "dhp223:2": "loše dobrim pobedi, ",
+  "dhp223:3": "tvrdičluk darovima pobedi "
 }
