Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -13,5 +13,6 @@
   "dhp223:1": "Mirom bes pobedi, ",
   "dhp223:2": "loše dobrim pobedi, ",
   "dhp223:3": "tvrdičluk darovima pobedi ",
-  "dhp223:4": "i lažova rečju istine. "
+  "dhp223:4": "i lažova rečju istine. ",
+  "dhp224:1": "Istinu govori, ne predaj se besu, "
 }
