--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -14,5 +14,6 @@
   "dhp223:2": "loše dobrim pobedi, ",
   "dhp223:3": "tvrdičluk darovima pobedi ",
   "dhp223:4": "i lažova rečju istine. ",
-  "dhp224:1": "Istinu govori, ne predaj se besu, "
+  "dhp224:1": "Istinu govori, ne predaj se besu, ",
+  "dhp224:2": "i od malog daj kad ko zatraži; "
 }
