Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -15,5 +15,6 @@
   "dhp223:3": "tvrdičluk darovima pobedi ",
   "dhp223:4": "i lažova rečju istine. ",
   "dhp224:1": "Istinu govori, ne predaj se besu, ",
-  "dhp224:2": "i od malog daj kad ko zatraži; "
+  "dhp224:2": "i od malog daj kad ko zatraži; ",
+  "dhp224:3": "idući duž ova tri puta, "
 }
