--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -16,5 +16,6 @@
   "dhp223:4": "i lažova rečju istine. ",
   "dhp224:1": "Istinu govori, ne predaj se besu, ",
   "dhp224:2": "i od malog daj kad ko zatraži; ",
-  "dhp224:3": "idući duž ova tri puta, "
+  "dhp224:3": "idući duž ova tri puta, ",
+  "dhp224:4": "u društvo bogova ćeš stići. "
 }
