Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -17,5 +17,6 @@
   "dhp224:1": "Istinu govori, ne predaj se besu, ",
   "dhp224:2": "i od malog daj kad ko zatraži; ",
   "dhp224:3": "idući duž ova tri puta, ",
-  "dhp224:4": "u društvo bogova ćeš stići. "
+  "dhp224:4": "u društvo bogova ćeš stići. ",
+  "dhp225:1": "Mudraci koji nikog ne povređuju, "
 }
