--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -18,5 +18,6 @@
   "dhp224:2": "i od malog daj kad ko zatraži; ",
   "dhp224:3": "idući duž ova tri puta, ",
   "dhp224:4": "u društvo bogova ćeš stići. ",
-  "dhp225:1": "Mudraci koji nikog ne povređuju, "
+  "dhp225:1": "Mudraci koji nikog ne povređuju, ",
+  "dhp225:2": "motreći stalno na dela svoja, "
 }
