Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -19,5 +19,6 @@
   "dhp224:3": "idući duž ova tri puta, ",
   "dhp224:4": "u društvo bogova ćeš stići. ",
   "dhp225:1": "Mudraci koji nikog ne povređuju, ",
-  "dhp225:2": "motreći stalno na dela svoja, "
+  "dhp225:2": "motreći stalno na dela svoja, ",
+  "dhp225:3": "takvi do večnog mesta stižu, "
 }
