Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -21,5 +21,6 @@
   "dhp225:1": "Mudraci koji nikog ne povređuju, ",
   "dhp225:2": "motreći stalno na dela svoja, ",
   "dhp225:3": "takvi do večnog mesta stižu, ",
-  "dhp225:4": "gde za njih tuge nema. "
+  "dhp225:4": "gde za njih tuge nema. ",
+  "dhp226:1": "Ko je uvek pažljiv, "
 }
