Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -22,5 +22,6 @@
   "dhp225:2": "motreći stalno na dela svoja, ",
   "dhp225:3": "takvi do večnog mesta stižu, ",
   "dhp225:4": "gde za njih tuge nema. ",
-  "dhp226:1": "Ko je uvek pažljiv, "
+  "dhp226:1": "Ko je uvek pažljiv, ",
+  "dhp226:2": "ko sebe kroti dan i noć, "
 }
