Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -23,5 +23,6 @@
   "dhp225:3": "takvi do večnog mesta stižu, ",
   "dhp225:4": "gde za njih tuge nema. ",
   "dhp226:1": "Ko je uvek pažljiv, ",
-  "dhp226:2": "ko sebe kroti dan i noć, "
+  "dhp226:2": "ko sebe kroti dan i noć, ",
+  "dhp226:3": "odlučan da do slobode stigne "
 }
