Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -24,5 +24,6 @@
   "dhp225:4": "gde za njih tuge nema. ",
   "dhp226:1": "Ko je uvek pažljiv, ",
   "dhp226:2": "ko sebe kroti dan i noć, ",
-  "dhp226:3": "odlučan da do slobode stigne "
+  "dhp226:3": "odlučan da do slobode stigne ",
+  "dhp226:4": "- u toga nečistoće nestaju. "
 }
