Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -25,5 +25,6 @@
   "dhp226:1": "Ko je uvek pažljiv, ",
   "dhp226:2": "ko sebe kroti dan i noć, ",
   "dhp226:3": "odlučan da do slobode stigne ",
-  "dhp226:4": "- u toga nečistoće nestaju. "
+  "dhp226:4": "- u toga nečistoće nestaju. ",
+  "dhp227:1": "Stara je to stvar, o Atula, "
 }
