--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -26,5 +26,6 @@
   "dhp226:2": "ko sebe kroti dan i noć, ",
   "dhp226:3": "odlučan da do slobode stigne ",
   "dhp226:4": "- u toga nečistoće nestaju. ",
-  "dhp227:1": "Stara je to stvar, o Atula, "
+  "dhp227:1": "Stara je to stvar, o Atula, ",
+  "dhp227:2": "a ne od juče, "
 }
