Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -27,5 +27,6 @@
   "dhp226:3": "odlučan da do slobode stigne ",
   "dhp226:4": "- u toga nečistoće nestaju. ",
   "dhp227:1": "Stara je to stvar, o Atula, ",
-  "dhp227:2": "a ne od juče, "
+  "dhp227:2": "a ne od juče, ",
+  "dhp227:3": "ljudi kude one koji u tišini sede, "
 }
