Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -30,5 +30,6 @@
   "dhp227:2": "a ne od juče, ",
   "dhp227:3": "ljudi kude one koji u tišini sede, ",
   "dhp227:4": "kude one koji govore mnogo, ",
-  "dhp227:5": "čak i one koji govore malo. "
+  "dhp227:5": "čak i one koji govore malo. ",
+  "dhp227:6": "Nekuđenog na ovom svetu nema. "
 }
