Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -31,5 +31,6 @@
   "dhp227:3": "ljudi kude one koji u tišini sede, ",
   "dhp227:4": "kude one koji govore mnogo, ",
   "dhp227:5": "čak i one koji govore malo. ",
-  "dhp227:6": "Nekuđenog na ovom svetu nema. "
+  "dhp227:6": "Nekuđenog na ovom svetu nema. ",
+  "dhp228:1": "Nije bilo, neće biti, "
 }
