Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -33,5 +33,6 @@
   "dhp227:5": "čak i one koji govore malo. ",
   "dhp227:6": "Nekuđenog na ovom svetu nema. ",
   "dhp228:1": "Nije bilo, neće biti, ",
-  "dhp228:2": "niti sada ima takvoga "
+  "dhp228:2": "niti sada ima takvoga ",
+  "dhp228:3": "koga bi ljudi samo kudili "
 }
