--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -36,5 +36,6 @@
   "dhp228:2": "niti sada ima takvoga ",
   "dhp228:3": "koga bi ljudi samo kudili ",
   "dhp228:4": "ili samo hvalili. ",
-  "dhp229:1": "No, gledajući ga iz dana u dan, "
+  "dhp229:1": "No, gledajući ga iz dana u dan, ",
+  "dhp229:2": "onoga mudri hvale "
 }
