Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -37,5 +37,6 @@
   "dhp228:3": "koga bi ljudi samo kudili ",
   "dhp228:4": "ili samo hvalili. ",
   "dhp229:1": "No, gledajući ga iz dana u dan, ",
-  "dhp229:2": "onoga mudri hvale "
+  "dhp229:2": "onoga mudri hvale ",
+  "dhp229:3": "ko je besprekoran u delima, "
 }
