--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -38,5 +38,6 @@
   "dhp228:4": "ili samo hvalili. ",
   "dhp229:1": "No, gledajući ga iz dana u dan, ",
   "dhp229:2": "onoga mudri hvale ",
-  "dhp229:3": "ko je besprekoran u delima, razborit, "
+  "dhp229:3": "ko je besprekoran u delima, razborit, ",
+  "dhp229:4": "sa mudrošću i vrlinom. "
 }
