Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -39,5 +39,6 @@
   "dhp229:1": "No, gledajući ga iz dana u dan, ",
   "dhp229:2": "onoga mudri hvale ",
   "dhp229:3": "ko je besprekoran u delima, razborit, ",
-  "dhp229:4": "sa mudrošću i vrlinom. "
+  "dhp229:4": "sa mudrošću i vrlinom. ",
+  "dhp230:1": "Ko može da kudi takvoga, "
 }
