--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -40,5 +40,6 @@
   "dhp229:2": "onoga mudri hvale ",
   "dhp229:3": "ko je besprekoran u delima, razborit, ",
   "dhp229:4": "sa mudrošću i vrlinom. ",
-  "dhp230:1": "Ko može da kudi takvoga, "
+  "dhp230:1": "Ko može da kudi takvoga, ",
+  "dhp230:2": "kad je nalik čistome zlatu? "
 }
