Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -42,5 +42,6 @@
   "dhp229:4": "sa mudrošću i vrlinom. ",
   "dhp230:1": "Ko može da kudi takvoga, ",
   "dhp230:2": "kad je nalik čistome zlatu? ",
-  "dhp230:3": "Bogovi takvoga hvale, "
+  "dhp230:3": "Bogovi takvoga hvale, ",
+  "dhp230:4": "hvali ga čak i moćni Brama! "
 }
